
set(DATA_ACCESS_SRC data_access.cc data_access_mgr.cc data_preprocess.cc data_preprocess_action.cc)
include_directories(${THIRDPARTY_INCLUDE_DIR})
include_directories(${BOOST_INCLUDE_DIR})
include_directories(${SRC_DIR})
include_directories(${PROTO_DIR})
include_directories(${COMMON_DIR})
link_directories(${THIRDPARTY_LIB_DIR})

add_library(access ${DATA_ACCESS_SRC})
target_link_libraries(access pthread)
target_link_libraries(access rt)
target_link_libraries(access z)
target_link_libraries(access glog)
target_link_libraries(access gflags)
target_link_libraries(access sofa-pbrpc)
target_link_libraries(access minos_client)
target_link_libraries(access config++)
target_link_libraries(access snappy)
target_link_libraries(access common)

set(DATAPREPROCESS_MAIN_SRC preprocess_main.cc data_preprocess_action.cc)
add_executable(dataaccess ${DATAPREPROCESS_MAIN_SRC})
target_link_libraries(dataaccess minos_client)
target_link_libraries(dataaccess access)
target_link_libraries(dataaccess snappy)
target_link_libraries(dataaccess common)
