
include_directories(${THIRDPARTY_INCLUDE_DIR})
include_directories(${BOOST_INCLUDE_DIR})
include_directories(${SRC_DIR})
include_directories(${PROTO_DIR})
include_directories(${COMMON_DIR})
link_directories(${THIRDPARTY_LIB_DIR})

set(DATAPROCESS_MAIN_SRC process_main.cc process_impl.cc process_adapt.cc process_chklist.cc process_chklist_item.cc)
add_executable(dataprocess ${DATAPROCESS_MAIN_SRC})
target_link_libraries(dataprocess minos_client)
target_link_libraries(dataprocess access)
target_link_libraries(dataprocess snappy)
target_link_libraries(dataprocess common)
target_link_libraries(dataprocess pthread)
target_link_libraries(dataprocess rt)
target_link_libraries(dataprocess z)
target_link_libraries(dataprocess glog)
target_link_libraries(dataprocess gflags)
target_link_libraries(dataprocess sofa-pbrpc)
target_link_libraries(dataprocess config++)
